--- a/.woodpecker/.lint.yml
+++ b/.woodpecker/.lint.yml
@@ -2,6 +2,7 @@ pipeline:
   lint:
     image: earthly/earthly:v0.6.28
     group: lint
-    privileged: true
     commands:
-      - earthly +lint
+      - earthly --ci +lint
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
