--- a/.woodpecker/.release-oci.yml
+++ b/.woodpecker/.release-oci.yml
@@ -2,9 +2,10 @@ pipeline:
   docker:
     image: earthly/earthly:v0.6.28
     group: build
-    privileged: true
     commands:
-      - earthly --push +image
+      - earthly --ci --push +image
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
 depends_on:
   - lint
